--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 remote_theme: pages-themes/architect@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+
+title: 黑泡泡选手的技术博客
+description: To be an excellent coder
